--- a/Transcendence/TSUI/TSUI.vcproj
+++ b/Transcendence/TSUI/TSUI.vcproj
@@ -216,6 +216,25 @@
 				<File
 					RelativePath=".\CHexarcService.cpp"
 					>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath=".\CHexarcServiceStub.cpp"
+					>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
 				</File>
 				<File
 					RelativePath=".\CXelerus.cpp"
