--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@
 *.user
 *.xls
 *.xlsx
+Alchemy/ALConsole
+Alchemy/ALGUI
+Alchemy/Aristotle
+Alchemy/TerraFirma
 BackupExclude.txt
 BuildLog.htm
 calcimage/*
