Deleted useless files

--- a/.gitignore
+++ b/.gitignore
@@ -53,8 +53,19 @@ S1/*
 STBrowser/*
 test.bat
 Transcendence/Documents/*
+Transcendence/Game/DebugExtensions/*
+Transcendence/Game/EffectsTest.xml
+Transcendence/Game/ErebienNames.dat
 Transcendence/Game/Extensions/*
+Transcendence/Game/FrenchCities.txt
+Transcendence/Game/HighScores.xml
 Transcendence/Game/Settings.xml
+Transcendence/Game/Spanish.dic
+Transcendence/Game/Storage.xml
+Transcendence/Game/TestExtension/*
+Transcendence/Game/Test*.tl
+Transcendence/OldTopology.xml
+Transcendence/RegisteredExtensions.txt
 Transcendence/TransSaver/Debug/*
 Transcendence/TransSaver/Release/*
 Transcendence/TSUI/CHexarcService.cpp
