--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ Transcendence/Release/*
 Transcendence/TransSaver/Debug/*
 Transcendence/TransSaver/Release/*
 Transcendence/TSUI/CHexarcService.cpp
+Transcendence/Worklist.txt
+Transcendence/Worklist (Completed).txt
 WikiData/*
