--- a/Transcendence/TSUI/TSUI.vcproj
+++ b/Transcendence/TSUI/TSUI.vcproj
@@ -228,6 +228,14 @@
 					RelativePath=".\CHexarcServiceStub.cpp"
 					>
 					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="true"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+						/>
+					</FileConfiguration>
+					<FileConfiguration
 						Name="Release|Win32"
 						ExcludedFromBuild="true"
 						>
