--- a/Transcendence/Transcendence.rc
+++ b/Transcendence/Transcendence.rc
@@ -62,8 +62,8 @@ APPICON                 ICON                    "Transcendence.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,8,3
- PRODUCTVERSION 1,0,8,3
+ FILEVERSION 1,0,8,4
+ PRODUCTVERSION 1,0,8,4
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -80,13 +80,13 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Neurohack"
             VALUE "FileDescription", "Transcendence"
-            VALUE "FileVersion", "1, 0, 8, 3"
+            VALUE "FileVersion", "1, 0, 8, 4"
             VALUE "InternalName", "Transcendence"
             VALUE "LegalCopyright", "Copyright © 2003-2012 Kronosaur Productions, LLC. All Rights Reserved."
             VALUE "LegalTrademarks", "Transcendence is a registered trademark of Kronosaur Productions, LLC."
             VALUE "OriginalFilename", "Transcendence.exe"
             VALUE "ProductName", "Transcendence"
-            VALUE "ProductVersion", "1.08c"
+            VALUE "ProductVersion", "1.08d"
         END
     END
     BLOCK "VarFileInfo"
