Support Read-Only Installation
If the game finds itself in a read-only directory, such as Program
Files, then it stores everything in {AppData}/Kronosaur/Transcendence.

Otherwise, it uses the executable directory to store everything.

This change also moves save files to a directory called Games.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ Transcendence/Worklist.txt
 Transcendence/Worklist (Completed).txt
 Transcendence/Debug/*
 Transcendence/Documents/*
+Transcendence/Game/*.bat
 Transcendence/Game/*.tdb
 Transcendence/Game/*.txt
 Transcendence/Game/Collection/*
