--- a/Transcendence/TSE/TSE.vcxproj
+++ b/Transcendence/TSE/TSE.vcxproj
@@ -206,6 +206,8 @@
     <ClCompile Include="CItemEnhancementStack.cpp" />
     <ClCompile Include="CMissionList.cpp" />
     <ClCompile Include="CMoveCtx.cpp" />
+    <ClCompile Include="CMultiverseNews.cpp" />
+    <ClCompile Include="CMultiverseNewsEntry.cpp" />
     <ClCompile Include="CObjectStats.cpp" />
     <ClCompile Include="CObjectTracker.cpp" />
     <ClCompile Include="COrderList.cpp" />
