--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -546,7 +546,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Game\HSCompatibility.xml" />
-    <None Include="Game\Ice.xml" />
+    <None Include="Game\Ice.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Game\Iocrym.xml">
       <SubType>Designer</SubType>
     </None>
@@ -730,7 +732,9 @@
     <None Include="Game\Resources\SubTitleHeavyBold.dxfn" />
     <None Include="Game\Resources\Title.dxfn" />
     <None Include="Game\Resources\Title.jpg" />
-    <None Include="Game\Metallic.xml" />
+    <None Include="Game\Metallic.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Transcendence.ico" />
     <None Include="Game\Resources\UIIcons.jpg" />
     <None Include="Game\Resources\UIIconsMask.bmp" />
@@ -804,7 +808,9 @@
     <None Include="Game\RPGAutons.xml">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Game\RPGBehaviors.xml" />
+    <None Include="Game\RPGBehaviors.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Game\RPGWingmen.xml">
       <SubType>Designer</SubType>
     </None>
